--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.3",
+    "helmet": "^7.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
