--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.3",
-    "helmet": "^7.0.0"
+    "helmet": "^7.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
