--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/auth": "^18.6.1",
     "@react-native-google-signin/google-signin": "^10.1.0",
     "@react-navigation/native": "^6.0.2",
+    "@tanstack/react-query": "^5.7.0",
     "expo": "~49.0.15",
     "expo-dev-client": "~2.4.11",
     "expo-font": "~11.4.0",
@@ -27,13 +28,18 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-paper": "^5.11.1",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-vector-icons": "^10.0.1",
+    "react-native-web": "~0.19.6",
+    "tailwindcss": "^3.3.2",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
