--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-fbsdk-next": "^12.1.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "^4.6.3",
