--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@react-native-google-signin/google-signin": "^10.1.0",
     "@react-navigation/native": "^6.0.2",
     "@tanstack/react-query": "^5.7.0",
+    "dotenv": "^16.3.1",
     "expo": "~49.0.15",
     "expo-dev-client": "~2.4.11",
     "expo-font": "~11.4.0",
