--- a/server/package.json
+++ b/server/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/main.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/main.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/main.js\"",
+    "db": "npx prisma db push",
+    "gen": "npx prisma generate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.5.2",
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.3",
     "helmet": "^7.0.0",
+    "prisma": "^5.5.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
