--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,13 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.3",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.5.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.8.10",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
