big checkin of registration and new expo routing

--- a/client/package.json
+++ b/client/package.json
@@ -14,17 +14,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.19.5",
     "@react-native-firebase/app": "^18.6.1",
     "@react-native-firebase/auth": "^18.6.1",
     "@react-native-google-signin/google-signin": "^10.1.0",
     "@react-navigation/native": "^6.0.2",
     "@tanstack/react-query": "^5.7.0",
+    "axios": "^1.6.1",
     "dotenv": "^16.3.1",
     "expo": "~49.0.15",
     "expo-dev-client": "~2.4.11",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
+    "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
@@ -32,6 +35,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
     "react-native-fbsdk-next": "^12.1.0",
     "react-native-gesture-handler": "~2.12.0",
