--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express-rate-limit": "^7.1.3",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "prisma": "^5.5.2",
     "zod": "^3.22.4"
   },
@@ -29,6 +30,7 @@
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.8.10",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
